--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://neveryu.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -80,6 +80,8 @@ deploy:
  type: git 
  repo: git@github.com:CharlieYuQi/CharlieYuQi.github.io.git   
  branch: master
+   message: 'Daily updated：{{now("YYYY-MM-DD HH:mm:ss")}} by CharlieYuQi'
+
 
  search:
   path: search.xml
