--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://charlieyuqi.github.io
+url: yuqi.tk
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -88,3 +88,9 @@ deploy:
   field: post
   format: html
   limit: 10000
+  
+  # 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
